@@ -191,3 +191,4 @@ element.ununbium.symbol = Cn
 int.minControlPanelWidth=215
 abundance=Abundance:
 verySmall=very small
+pattern.0element.1massNumber = {0}-{1}
